[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={ version = "*", features = ["full"]}
axum = "*"
once_cell = "*"
regex = "*"
regex-macro = "*"
serde_json = "*"
queues = "1.1.0"
anyhow = "*"
rand = "*"